// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-heading-wc should render with _label="Heading" _secondaryHeadline="Secondary Heading" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <hgroup>
    <h1 class="headline headline-h1">
      Heading
    </h1>
    <p class="secondary-headline">
      Secondary Heading
    </p>
  </hgroup>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=0 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <strong class="headline headline-strong">
    Headline
  </strong>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=1 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h1">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=2 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h2 class="headline headline-h2">
    Headline
  </h2>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=3 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h3 class="headline headline-h3">
    Headline
  </h3>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=4 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h4 class="headline headline-h4">
    Headline
  </h4>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=5 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h5 class="headline headline-h5">
    Headline
  </h5>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _level=6 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h6 class="headline headline-h6">
    Headline
  </h6>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h1" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h1">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h2" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h2">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h3" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h3">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h4" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h4">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h5" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h5">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="h6" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h6">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" _variant="strong" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-strong">
    Headline
  </h1>
</kol-heading-wc>
`;

exports[`kol-heading-wc should render with _label="Headline" 1`] = `
<kol-heading-wc class="kol-heading-wc">
  <!---->
  <h1 class="headline headline-h1">
    Headline
  </h1>
</kol-heading-wc>
`;
